logs/password_reset_log.txt
src\test\java\com\abin\selenium\tdd\automation\withouttestng\PasswordReset_NoTestNG.java:21: error: unmappable character (0x9D) for encoding windows-1252
            System.out.println("â?Œ Reset failed or wrong message");
                                 ^
1 error
src\test\java\com\abin\selenium\tdd\automation\withouttestng\PasswordReset_NoTestNG.java:21: error: unmappable character (0x9D) for encoding windows-1252
            System.out.println("â?Œ Reset failed or wrong message");
                                 ^
1 error
src\test\java\com\abin\selenium\tdd\automation\withouttestng\PasswordReset_NoTestNG.java:3: error: package org.openqa.selenium does not exist
import org.openqa.selenium.WebDriver;
                          ^
src\test\java\com\abin\selenium\tdd\automation\withouttestng\PasswordReset_NoTestNG.java:4: error: package org.openqa.selenium.chrome does not exist
import org.openqa.selenium.chrome.ChromeDriver;
                                 ^
src\test\java\com\abin\selenium\tdd\automation\withouttestng\PasswordReset_NoTestNG.java:5: error: package org.openqa.selenium does not exist
import org.openqa.selenium.By;
                          ^
src\test\java\com\abin\selenium\tdd\automation\withouttestng\PasswordReset_NoTestNG.java:10: error: cannot find symbol
        WebDriver driver = new ChromeDriver();
        ^
  symbol:   class WebDriver
  location: class PasswordReset_NoTestNG
src\test\java\com\abin\selenium\tdd\automation\withouttestng\PasswordReset_NoTestNG.java:10: error: cannot find symbol
        WebDriver driver = new ChromeDriver();
                               ^
  symbol:   class ChromeDriver
  location: class PasswordReset_NoTestNG
src\test\java\com\abin\selenium\tdd\automation\withouttestng\PasswordReset_NoTestNG.java:14: error: cannot find symbol
        driver.findElement(By.name("username")).sendKeys("Admin");
                           ^
  symbol:   variable By
  location: class PasswordReset_NoTestNG
src\test\java\com\abin\selenium\tdd\automation\withouttestng\PasswordReset_NoTestNG.java:15: error: cannot find symbol
        driver.findElement(By.cssSelector("button[type='submit']")).click();
                           ^
  symbol:   variable By
  location: class PasswordReset_NoTestNG
src\test\java\com\abin\selenium\tdd\automation\withouttestng\PasswordReset_NoTestNG.java:17: error: cannot find symbol
        String result = driver.findElement(By.className("orangehrm-forgot-password-title")).getText();
                                           ^
  symbol:   variable By
  location: class PasswordReset_NoTestNG
8 errors
src\test\java\com\abin\selenium\tdd\automation\withouttestng\PasswordReset_NoTestNG.java:3: error: package org.openqa.selenium does not exist
import org.openqa.selenium.WebDriver;
                          ^
src\test\java\com\abin\selenium\tdd\automation\withouttestng\PasswordReset_NoTestNG.java:4: error: package org.openqa.selenium.chrome does not exist
import org.openqa.selenium.chrome.ChromeDriver;
                                 ^
src\test\java\com\abin\selenium\tdd\automation\withouttestng\PasswordReset_NoTestNG.java:5: error: package org.openqa.selenium does not exist
import org.openqa.selenium.By;
                          ^
src\test\java\com\abin\selenium\tdd\automation\withouttestng\PasswordReset_NoTestNG.java:10: error: cannot find symbol
        WebDriver driver = new ChromeDriver();
        ^
  symbol:   class WebDriver
  location: class PasswordReset_NoTestNG
src\test\java\com\abin\selenium\tdd\automation\withouttestng\PasswordReset_NoTestNG.java:10: error: cannot find symbol
        WebDriver driver = new ChromeDriver();
                               ^
  symbol:   class ChromeDriver
  location: class PasswordReset_NoTestNG
src\test\java\com\abin\selenium\tdd\automation\withouttestng\PasswordReset_NoTestNG.java:14: error: cannot find symbol
        driver.findElement(By.name("username")).sendKeys("Admin");
                           ^
  symbol:   variable By
  location: class PasswordReset_NoTestNG
src\test\java\com\abin\selenium\tdd\automation\withouttestng\PasswordReset_NoTestNG.java:15: error: cannot find symbol
        driver.findElement(By.cssSelector("button[type='submit']")).click();
                           ^
  symbol:   variable By
  location: class PasswordReset_NoTestNG
src\test\java\com\abin\selenium\tdd\automation\withouttestng\PasswordReset_NoTestNG.java:17: error: cannot find symbol
        String result = driver.findElement(By.className("orangehrm-forgot-password-title")).getText();
                                           ^
  symbol:   variable By
  location: class PasswordReset_NoTestNG
8 errors
src\test\java\com\abin\selenium\tdd\automation\withouttestng\PasswordReset_NoTestNG.java:3: error: package org.openqa.selenium does not exist
import org.openqa.selenium.WebDriver;
                          ^
src\test\java\com\abin\selenium\tdd\automation\withouttestng\PasswordReset_NoTestNG.java:4: error: package org.openqa.selenium.chrome does not exist
import org.openqa.selenium.chrome.ChromeDriver;
                                 ^
src\test\java\com\abin\selenium\tdd\automation\withouttestng\PasswordReset_NoTestNG.java:5: error: package org.openqa.selenium does not exist
import org.openqa.selenium.By;
                          ^
src\test\java\com\abin\selenium\tdd\automation\withouttestng\PasswordReset_NoTestNG.java:10: error: cannot find symbol
        WebDriver driver = new ChromeDriver();
        ^
  symbol:   class WebDriver
  location: class PasswordReset_NoTestNG
src\test\java\com\abin\selenium\tdd\automation\withouttestng\PasswordReset_NoTestNG.java:10: error: cannot find symbol
        WebDriver driver = new ChromeDriver();
                               ^
  symbol:   class ChromeDriver
  location: class PasswordReset_NoTestNG
src\test\java\com\abin\selenium\tdd\automation\withouttestng\PasswordReset_NoTestNG.java:14: error: cannot find symbol
        driver.findElement(By.name("username")).sendKeys("Admin");
                           ^
  symbol:   variable By
  location: class PasswordReset_NoTestNG
src\test\java\com\abin\selenium\tdd\automation\withouttestng\PasswordReset_NoTestNG.java:15: error: cannot find symbol
        driver.findElement(By.cssSelector("button[type='submit']")).click();
                           ^
  symbol:   variable By
  location: class PasswordReset_NoTestNG
src\test\java\com\abin\selenium\tdd\automation\withouttestng\PasswordReset_NoTestNG.java:17: error: cannot find symbol
        String result = driver.findElement(By.className("orangehrm-forgot-password-title")).getText();
                                           ^
  symbol:   variable By
  location: class PasswordReset_NoTestNG
8 errors
src\test\java\com\abin\selenium\tdd\automation\withouttestng\PasswordReset_NoTestNG.java:3: error: package org.openqa.selenium does not exist
import org.openqa.selenium.WebDriver;
                          ^
src\test\java\com\abin\selenium\tdd\automation\withouttestng\PasswordReset_NoTestNG.java:4: error: package org.openqa.selenium.chrome does not exist
import org.openqa.selenium.chrome.ChromeDriver;
                                 ^
src\test\java\com\abin\selenium\tdd\automation\withouttestng\PasswordReset_NoTestNG.java:5: error: package org.openqa.selenium does not exist
import org.openqa.selenium.By;
                          ^
src\test\java\com\abin\selenium\tdd\automation\withouttestng\PasswordReset_NoTestNG.java:10: error: cannot find symbol
        WebDriver driver = new ChromeDriver();
        ^
  symbol:   class WebDriver
  location: class PasswordReset_NoTestNG
src\test\java\com\abin\selenium\tdd\automation\withouttestng\PasswordReset_NoTestNG.java:10: error: cannot find symbol
        WebDriver driver = new ChromeDriver();
                               ^
  symbol:   class ChromeDriver
  location: class PasswordReset_NoTestNG
src\test\java\com\abin\selenium\tdd\automation\withouttestng\PasswordReset_NoTestNG.java:14: error: cannot find symbol
        driver.findElement(By.name("username")).sendKeys("Admin");
                           ^
  symbol:   variable By
  location: class PasswordReset_NoTestNG
src\test\java\com\abin\selenium\tdd\automation\withouttestng\PasswordReset_NoTestNG.java:15: error: cannot find symbol
        driver.findElement(By.cssSelector("button[type='submit']")).click();
                           ^
  symbol:   variable By
  location: class PasswordReset_NoTestNG
src\test\java\com\abin\selenium\tdd\automation\withouttestng\PasswordReset_NoTestNG.java:17: error: cannot find symbol
        String result = driver.findElement(By.className("orangehrm-forgot-password-title")).getText();
                                           ^
  symbol:   variable By
  location: class PasswordReset_NoTestNG
8 errors
